# tncli

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  go.mod  install.sh
.claude/: settings.local.json
.github/workflows/: release.yml
cmd/tncli/: cmd_attach.go  cmd_completion.go  cmd_db.go  cmd_disk.go  cmd_list.go  cmd_logs.go  cmd_popup.go  cmd_restart.go  cmd_run.go  cmd_setup.go  cmd_start.go  cmd_status.go  cmd_stop.go  cmd_ui.go  cmd_update.go  cmd_version.go  cmd_workspace.go  main.go  root.go
docs/: ARCHITECTURE.md  HOW_IT_WORKS.md  PORT_ALLOCATION.md  pipeline-create.md  tui-view-map.md
internal/commands/: colors.go  db.go  disk.go  migrate.go  proxy.go  services.go  setup.go  update.go  workspace.go
internal/config/: config.go  config_parse.go  config_test.go  depgraph.go  depgraph_test.go
internal/lock/: lock.go
internal/paths/: paths.go  paths_test.go
internal/pipeline/: context.go  create.go  create_helpers.go  create_stages.go  delete.go  pipeline.go  runner.go  stages.go
internal/popup/: cheatsheet.go  list.go  popup.go  theme.go
internal/services/: compose.go  dns.go  docker.go  docker_iface.go  env_regen.go  env_regen_test.go  files.go  git.go  git_iface.go  ip.go  loopback.go  network.go  network_lock.go  proxy.go  registry.go  services.go  services_test.go  utils.go  workspace.go  ws_state.go
internal/tmux/: iface.go  tmux.go
internal/tui/: actions.go  actions_misc.go  model.go  popups.go  popups_poll.go  popups_ws.go  procstats.go  (+4 more)
src/: SOURCE.md  commands.rs  config.rs  lock.rs  main.rs  popup.rs  tmux.rs  worktree.rs
(+52 files in other folders)
