[package]
name = "tncli"
version = "0.4.3"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
serde_json = "1"
color-eyre = "0.6"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "signal", "time"] }

[profile.release]
strip = true
lto = true
